--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "autocorector": "^3.1.2",
-    "expo":"~49.0.13",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.19",
+    "autocorector": "^3.1.6",
+    "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "jest-expo": "^46.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.13.3",
+    "react-native-safe-area-context": "^4.7.3",
     "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
